--- a/src/app/pages/add-usuario/add-usuario.page.html
+++ b/src/app/pages/add-usuario/add-usuario.page.html
@@ -6,4 +6,26 @@
 
 <ion-content>
 
+  <form>
+    <ion-item>
+      <ion-label position="floating">Nome</ion-label>
+      <ion-input type="text" name="nome" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">E-mail</ion-label>
+      <ion-input type="email" name="email" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Senha</ion-label>
+      <ion-input type="password" name="pws" required></ion-input>
+    </ion-item>
+
+    <section>
+      <ion-button type="submit" expand="full" >Salvar</ion-button>
+      <ion-button type="reset" expand="full" color="danger">Cancelar</ion-button>
+    </section>
+  </form>
+
 </ion-content>
