--- a/src/app/pages/add-usuario/add-usuario.page.html
+++ b/src/app/pages/add-usuario/add-usuario.page.html
@@ -6,24 +6,31 @@
 
 <ion-content>
 
-  <form>
+  <form #fc="ngForm" (ngSubmit)="onSubmit(fc)">
     <ion-item>
       <ion-label position="floating">Nome</ion-label>
-      <ion-input type="text" name="nome" required></ion-input>
+      <ion-input type="text" name="nome" [(ngModel)]="usuario.nome" required></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">E-mail</ion-label>
-      <ion-input type="email" name="email" required></ion-input>
+      <ion-input type="email" name="email" [(ngModel)]="usuario.email" required pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}" ></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label position="floating">Senha</ion-label>
-      <ion-input type="password" name="pws" required></ion-input>
+      <ion-input type="password" name="pws" [(ngModel)]="usuario.pws" required minlength="6" #s="ngModel"></ion-input>
     </ion-item>
+    <ion-text color="danger" *ngIf="s.invalid && s.dirty"> Senha muito curta. </ion-text>
+
+    <ion-item>
+      <ion-label position="floating">Confirmar senha</ion-label>
+      <ion-input type="password" name="confpws" (ngModel)="confpws" required minlength="6" #c="ngModel"></ion-input>
+    </ion-item>
+    <ion-text color="danger" *ngIf="s.value != c.value && c.dirty"> Senhas diferentes! </ion-text>
 
     <section>
-      <ion-button type="submit" expand="full" >Salvar</ion-button>
+      <ion-button type="submit" expand="full" [disabled]="fc.invalid || s.value != c.value">Salvar</ion-button>
       <ion-button type="reset" expand="full" color="danger">Cancelar</ion-button>
     </section>
   </form>
