--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,3 +1,14 @@
+<ion-header>
+  <ion-toolbar>
+      <ion-title slot="start">
+          Tab One
+      </ion-title>
+      <ion-title slot="end">
+          <ion-icon name="person" routerLink="/login"></ion-icon>
+      </ion-title>
+  </ion-toolbar>
+</ion-header>
+
 <ion-tabs>
 
   <ion-tab-bar slot="bottom">
