--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,9 +1,31 @@
-<ion-header>
+<!-- <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title>Login e Cadatro</ion-title>
   </ion-toolbar>
-</ion-header>
+</ion-header> -->
 
 <ion-content>
+  <form #fc="ngForm" (ngSubmit)="onSubmit(fc)">
+       <ion-item>
+        <ion-label position="floating">E-mail</ion-label>
+        <ion-input type="email" name="email" [(ngModel)]="email" required pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}"></ion-input>
+    </ion-item>
+
+    <ion-item>
+        <ion-label position="floating">Senha</ion-label>
+        <ion-input type="password" name="pws" [(ngModel)]="pws" required minlength="6" #s="ngModel"></ion-input>
+    </ion-item>
+
+    <section>
+        <ion-button type="submit" expand="full" [disabled]="fc.invalid">Entrar</ion-button>
+        <ion-button type="reset" expand="full" color="danger" routerLink="">Cancelar</ion-button>
+    </section>
+</form>
+
+<section>
+  <ion-button expand="full" [disabled]="fc.invalid" color="success" routerLink="/tabs/addUsuario">Novo cadastro</ion-button>
+
+  <ion-button expand="full" color="">Entrar pelo Google</ion-button>
+</section>
 
 </ion-content>
