--- a/src/app/pages/pefil-usuario/pefil-usuario.page.html
+++ b/src/app/pages/pefil-usuario/pefil-usuario.page.html
@@ -1,9 +1,25 @@
 <ion-header>
-  <ion-toolbar>
-    <ion-title>pefil-usuario</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Pefil Usuario</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content>
+    <ion-list lines="none">
+        <ion-item>
+            <h2>{{usuario.nome}}</h2>
+        </ion-item>
+        <ion-item>
+            <p>E-mail:{{usuarioService.afAth.user.email}}</p>
+        </ion-item>
+        <ion-item>
+            <p>Ativo:{{usuario.ativo}}</p>
+        </ion-item>
+
+        <ion-item>
+            <ion-button type="reset" expand="full" color="danger" (click)="sair()">Sair</ion-button>
+        </ion-item>
+
+    </ion-list>
 
 </ion-content>
