--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -1,31 +1,32 @@
 <ion-header>
-  <ion-toolbar>
-      <ion-title slot="start">
-          Tab One
-      </ion-title>
-      <ion-title slot="end">
-          <ion-icon name="person" routerLink="/login"></ion-icon>
-      </ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title slot="start">
+            Ionic Model
+        </ion-title>
+        <ion-title slot="end">
+            <ion-icon name="person" routerLink="/login" *ngIf="!this.usuarioService.afAuth.auth.currentUser"></ion-icon>
+            <ion-icon name="camera" routerLink="/tabs/perfilUsuario" *ngIf="this.usuarioService.afAuth.auth.currentUser"></ion-icon>
+        </ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-tabs>
 
-  <ion-tab-bar slot="bottom">
-    <ion-tab-button tab="tab1">
-      <ion-icon name="flash"></ion-icon>
-      <ion-label>Tab One</ion-label>
-    </ion-tab-button>
+    <ion-tab-bar slot="bottom">
+        <ion-tab-button tab="tab1">
+            <ion-icon name="flash"></ion-icon>
+            <ion-label>Tab One</ion-label>
+        </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
-    </ion-tab-button>
+        <ion-tab-button tab="tab2">
+            <ion-icon name="apps"></ion-icon>
+            <ion-label>Tab Two</ion-label>
+        </ion-tab-button>
 
-    <ion-tab-button tab="tab3">
-      <ion-icon name="send"></ion-icon>
-      <ion-label>Tab Three</ion-label>
-    </ion-tab-button>
-  </ion-tab-bar>
+        <ion-tab-button tab="tab3">
+            <ion-icon name="send"></ion-icon>
+            <ion-label>Tab Three</ion-label>
+        </ion-tab-button>
+    </ion-tab-bar>
 
 </ion-tabs>
