--- a/src/app/pages/pefil-usuario/pefil-usuario.page.html
+++ b/src/app/pages/pefil-usuario/pefil-usuario.page.html
@@ -10,7 +10,7 @@
             <h2>{{usuario.nome}}</h2>
         </ion-item>
         <ion-item>
-            <p>E-mail:{{usuarioService.afAth.user.email}}</p>
+            <p>E-mail:{{usuario.email}}</p>
         </ion-item>
         <ion-item>
             <p>Ativo:{{usuario.ativo}}</p>
