--- a/src/app/pages/add-usuario/add-usuario.page.html
+++ b/src/app/pages/add-usuario/add-usuario.page.html
@@ -39,7 +39,7 @@
                 <ion-text color="danger" *ngIf="s.value != c.value && c.dirty">Senha diferentes.</ion-text>
               <section>
 
-                  <ion-button type="submit" expand="full" [disabled]="fc.invalid || s.salve !=c.value">Salvar</ion-button>
+                  <ion-button type="submit" expand="full" [disabled]="fc.invalid || s.value !=c.value">Salvar</ion-button>
                   <ion-button type="reset" expand="full" color="danger" >Cancelar</ion-button>
                   
               </section>
