--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -8,7 +8,8 @@
     <form #fc="ngForm" (ngSubmit)="onSubmit(fc)">
         <ion-item>
             <ion-label position="floating">E-mail</ion-label>
-            <ion-input type="email" name="email" [(ngModel)]="email" required pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}"></ion-input>
+            <ion-input type="email" name="email" [(ngModel)]="email" required
+                pattern="[a-zA-Z0-9.-_]{1,}@[a-zA-Z.-]{2,}[.]{1}[a-zA-Z]{2,}"></ion-input>
         </ion-item>
 
         <ion-item>
@@ -17,15 +18,16 @@
         </ion-item>
 
         <section>
-            <ion-button type="submit" expand="full" [disabled]="fc.invalid">Entrar</ion-button>
-            <ion-button type="reset" expand="full" color="danger" routerLink="">Cancelar</ion-button>
+            <ion-button type="submit" expand="block" [disabled]="fc.invalid">Entrar</ion-button>
+            <ion-button type="reset" expand="block" color="danger" routerLink="">Cancelar</ion-button>
         </section>
     </form>
+</ion-content>
 
+<ion-content class="ion-padding">
     <section>
-        <ion-button expand="full" color="warning" routerLink="/tabs/addUsuario">
+        <ion-button expand="block" color="warning" routerLink="/tabs/addUsuario">
             Novo cadastro</ion-button>
-        <ion-button expand="full" color="">Entrar pelo Google</ion-button>
+        <ion-button expand="block" fill="outline" (click)="loginGoogle()">Entrar pelo Google</ion-button>
     </section>
-
 </ion-content>
