--- a/src/app/pages/pefil-usuario/pefil-usuario.page.html
+++ b/src/app/pages/pefil-usuario/pefil-usuario.page.html
@@ -20,6 +20,10 @@
         <ion-item>
             <p>Ativo:{{usuario.ativo}}</p>
         </ion-item>
+        <ion-item>
+            <p>Latitude: {{usuario.lat}}</p>
+            <p>Longitude: {{usuario.lng}}</p>
+        </ion-item>
 
         <ion-item>
             <ion-button type="reset" expand="full" color="danger" (click)="sair()">Sair</ion-button>
