--- a/src/app/pages/perfil-usuario/perfil-usuario.page.html
+++ b/src/app/pages/perfil-usuario/perfil-usuario.page.html
@@ -6,20 +6,25 @@
 
 <ion-content>
   <ion-list lines="none">
-      <ion-item>
-          <img src="assets/perfil.png " *ngIf="!usuario.foto">
-            <img [src]="usuario.foto " *ngIf="usuario.foto">
-      </ion-item>
+    <ion-item>
+      <img src="assets/perfil.png " *ngIf="!usuario.foto">
+      <img [src]="usuario.foto " *ngIf="usuario.foto">
+    </ion-item>
 
     <ion-item>
       <h2>{{usuario.nome}}</h2>
     </ion-item>
-    
-      <ion-item>
-          <p>E-mail:{{usuario.email}}</p>
-        </ion-item>
-        <ion-item>
-            <p>Ativo:{{usuario.ativo}}</p>
+
+    <ion-item>
+      <p>E-mail:{{usuario.email}}</p>
+    </ion-item>
+    <ion-item>
+      <p>Ativo:{{usuario.ativo}}</p>
+    </ion-item>
+
+    <ion-item>
+      <p>Latitude:{{usuario.lat}}</p>
+      <p>Longitude:{{usuario.lng}}</p>
           </ion-item>
       <ion-item>
           <ion-button type="reset" expand="full" color="danger"(click)="sair()">Sair</ion-button>
