--- a/src/app/pages/add-usuario/add-usuario.page.html
+++ b/src/app/pages/add-usuario/add-usuario.page.html
@@ -1,6 +1,6 @@
 <ion-header>
     <ion-toolbar>
-        <ion-title>add-usuario</ion-title>
+        <ion-title>Dados do Usuario</ion-title>
     </ion-toolbar>
 </ion-header>
 
