--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -25,9 +25,9 @@
             <ion-label>Tab One</ion-label>
         </ion-tab-button>
 
-        <ion-tab-button tab="tab2">
+        <ion-tab-button tab="addProduto">
             <ion-icon name="apps"></ion-icon>
-            <ion-label>Tab Two</ion-label>
+            <ion-label>Produtos</ion-label>
         </ion-tab-button>
 
         <ion-tab-button tab="tab3">
