--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -5,6 +5,7 @@
       </ion-title>
       <ion-title slot="end">
         <ion-icon name="person" routerLink="/login"*ngIf="!UsuarioService.afAuth.auth.currentUser"></ion-icon>
+        
 
        
 
@@ -28,9 +29,9 @@
       <ion-label>Tab One</ion-label>
     </ion-tab-button>
 
-    <ion-tab-button tab="tab2">
-      <ion-icon name="apps"></ion-icon>
-      <ion-label>Tab Two</ion-label>
+    <ion-tab-button tab="googlemaps">
+      <ion-icon name="locate"></ion-icon>
+      <ion-label>Mapa</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
