--- a/src/app/pages/add-produto/add-produto.page.html
+++ b/src/app/pages/add-produto/add-produto.page.html
@@ -4,6 +4,33 @@
   </ion-toolbar>
 </ion-header>
 
+
 <ion-content>
+  <form #fc="ngForm" (ngSubmit)="onSubmit(fc)">
+    <ion-item>
+      <ion-label position="floating">Nome</ion-label>
+      <ion-input type="text" name="nome" [(ngModel)]="produto.nome" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Descrição</ion-label>
+      <ion-input type="descricao" name="descricao" [(ngModel)]="produto.descricao" required></ion-input>
+    </ion-item>
+
+    <ion-item>
+      <ion-label position="floating">Quantidade</ion-label>
+      <ion-input type="quant" name="quant" [(ngModel)]="produto.quant" required></ion-input>
+    </ion-item>
+
+
+
+
+
+    <ion-button type="submit" expand="full" [disabled]="fc.invalid || s.value !=c.value">Enviar</ion-button>
+    <ion-button type="reset" expand="full" color="danger">Cancelar</ion-button>
+
+    </section>
+  </form>
+  {{produto.nome}}
 
 </ion-content>
