--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -2,22 +2,22 @@
 
 <ion-content>
     <ion-card class="welcome-card">
-      <img src="/assets/shapes.svg" alt="" />
+      <img src="/assets/quentinha.jfif" alt="" />
       <ion-card-header>
         <ion-card-subtitle>Get Started</ion-card-subtitle>
         <ion-card-title>Welcome to Ionic</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <p>Now that your app has been created, you'll want to start building out features and components. Check out some of the resources below for next steps.</p>
+        <p>Sua quentinha todos os dias!</p>
       </ion-card-content>
     </ion-card>
     <ion-list lines="none">
       <ion-list-header>
         <ion-label>Resources</ion-label>
       </ion-list-header>
-      <ion-item href="https://ionicframework.com/docs/">
-        <ion-icon slot="start" color="medium" name="book"></ion-icon>
-        <ion-label>Ionic Documentation</ion-label>
+      <ion-item href="https://pensaodelivery.000webhostapp.com/">
+        <ion-icon slot="start" color="medium" name="airplane"></ion-icon>
+        <ion-label>Visite nosso site!</ion-label>
       </ion-item>
       <ion-item href="https://ionicframework.com/docs/building/scaffolding">
         <ion-icon slot="start" color="medium" name="build"></ion-icon>
