--- a/src/app/pages/add-produto/add-produto.page.scss
+++ b/src/app/pages/add-produto/add-produto.page.scss
@@ -2,3 +2,10 @@
     height: 300px;
     //width: 100%;
 }
+
+img{
+    // width: 80%;
+    height: 200px;
+    border-radius: 50%;
+    margin: auto;
+}
