--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -20,7 +20,7 @@
 <ion-tabs>
 
     <ion-tab-bar slot="bottom">
-        <ion-tab-button tab="tab1">
+        <ion-tab-button tab="listProdutos">
             <ion-icon name="flash"></ion-icon>
             <ion-label>Tab One</ion-label>
         </ion-tab-button>
