--- a/src/app/pages/list-produto/list-produto.page.html
+++ b/src/app/pages/list-produto/list-produto.page.html
@@ -12,8 +12,9 @@
   </ion-item>
 
   <ion-list *ngIf="!lista">
-    <ion-card class="" *ngFor="let p of produtos">
-      <img src="" alt="" />
+    <ion-card class="cards" *ngFor="let p of produtos">
+      <img src="{{p.fotos[0]}}" alt="" *ngIf="p.fotos[0]!=null" />
+      <img src="assets/box.png" alt="" *ngIf="p.fotos[0]==null" />
       <ion-card-header>
         <ion-card-subtitle>{{p.nome}}</ion-card-subtitle>
         <ion-card-title>{{ p.valor | currency:'BRL' }}</ion-card-title>
@@ -24,13 +25,17 @@
     </ion-card>
   </ion-list>
 
-  <ion-list class="" *ngIf="lista">
+  <ion-list class="lista" *ngIf="lista">
     <ion-item-sliding *ngFor="let p of produtos">
       <ion-item-options side="start">
         <ion-item-option (click)="atualizar(p.key)" color="primary">Atualizar</ion-item-option>
       </ion-item-options>
 
       <ion-item>
+        <ion-avatar>
+          <img src="{{p.fotos[0]}}" alt="" *ngIf="p.fotos[0]!=null" />
+          <img src="assets/box.png" alt="" *ngIf="p.fotos[0]==null" />
+        </ion-avatar>
         <ion-label>{{ p.nome }}</ion-label>
         <ion-text>{{ p.key }}</ion-text>
       </ion-item>
