--- a/src/app/pages/add-produto/add-produto.page.scss
+++ b/src/app/pages/add-produto/add-produto.page.scss
@@ -3,9 +3,13 @@
     //width: 100%;
 }
 
-img{
+.foto img{
     // width: 80%;
     height: 200px;
     border-radius: 50%;
     margin: auto;
+}
+
+.fotos img{
+      height: 100px;
 }
